--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
           </div>
         </div>
       </div>
+      <div class="link">
+        <a href="https://stellular-figolla-a88a5d.netlify.app"
+          >Open-source code,</a
+        >
+        by Samar Joharchi
+      </div>
     </div>
     <script src="src/index.js"></script>
   </body>
